Fixing issues with eyes alignment and accordion feature in html

--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,13 @@ body {
 }
 
 .eyes {
+  display: flex;
   position: absolute;
-  top: 500%;
-  transform: translateY(-50%);
-  width: 100%;
-  text-align: center;
-  margin-left: -1600px;
+  /* top: 500%; */
+  transform: translateY(50%);
+  /* width: 100%; */
+  /* text-align: center; */
+  /* margin-left: -1600px; */
 }
 .eye {
   width: 240px;
